# ecommerce-data-pipeline

./: .env.example  .gitignore  .gitkeep  README.md  data_profile_report.json  data_quality_report.html  docker-compose-airflow.yml  docker-compose.yml  pyproject.toml  requirements-phase2.txt  requirements.txt  tgres psql -U dataeng -d ecommerce_db
airflow/dags/: daily_quality_check.py  refresh_aggregations.py  weekly_full_pipeline.py
data/: README.md
data/raw/: customers.csv  orders.csv  products.csv
docs/: PROJECT_SUMMARY.md  cloud_deployment_strategy.md  phase3_ingestion_notes.md  phase4_processing_notes.md  phase5_quality_notes.md  phase7_airflow_notes.md
ecommerce_data_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
sql/: create_aggregations.sql  create_schema.sql  create_views.sql  phase4_aggregations.sql
src/: __init__.py  generate_ecommerce_data.py  validate_data.py
src/generation/: generate_ecommerce_data.py
src/ingestion/: load_csv_to_postgres.py
src/processing/: README.md  refresh_aggregations.py
src/quality/: data_quality_checks.py  detect_anomalies.py  generate_quality_report.py  profile_data.py  validate_data.py
src/utils/: __init__.py  config.py  db_connector.py
